# clp-loglib-py

./: .gitignore  README-protocol.md  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: package.yaml  pr-title-checks.yaml  release.yaml
src/clp_logging/: auto_generated_kv_pairs_utils.py  decoder.py  encoder.py  handlers.py  protocol.py  readers.py  remote_handlers.py  utils.py
tests/: __init__.py  test_handlers.py
