[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "clp_logging"
version = "0.0.12"
license = { text = "Apache License 2.0" }
authors = [
    { name="david lion", email="david.lion@yscope.com" },
]
description = "Logging/encoding/decoding using CLP's IR stream format"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "clp-ffi-py >= 0.0.9",
    "python-dateutil >= 2.7.0",
    "typing-extensions >= 3.7.4",
    "zstandard >= 0.18.0",
]
classifiers = [
"License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
dev = [
    "black >= 23.11.0",
    "build >= 0.8.0",
    "docformatter >= 1.5.1",
    "mypy >= 0.982",
    "ruff >= 0.1.5",
    "types-python-dateutil >= 2.8.19.2",
]
test = [
    "smart_open >= 6.3.0",
]

[project.urls]
"Homepage" = "https://github.com/y-scope/clp-loglib-py"
"Bug Tracker" = "https://github.com/y-scope/clp-loglib-py/issues"

[tool.black]
line-length = 100
target-version = ["py311"]
color = true
preview = true

[tool.docformatter]
make-summary-multi-line = true
pre-summary-newline = true
recursive = true
wrap-summaries = 80
wrap-descriptions = 80

[tool.mypy]
strict = true
pretty = true

[tool.ruff]
line-length = 100
select = ["E", "I", "F"]
src = ["src"]

[tool.ruff.isort]
order-by-type = false

[tool.setuptools_scm]
