[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "clp_logging"
version = "0.0.13"
license = { text = "Apache License 2.0" }
authors = [
    { name="david lion", email="david.lion@yscope.com" },
]
description = "Logging/encoding/decoding using CLP's IR stream format"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "backports.zoneinfo >= 0.2.1; python_version < '3.9'",
    "clp-ffi-py >= 0.0.11",
    "typing-extensions >= 3.7.4",
    "tzlocal == 5.1; python_version < '3.8'",
    "tzlocal >= 5.2; python_version >= '3.8'",
    "zstandard >= 0.18.0",
]
classifiers = [
"License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
dev = [
    "black >= 24.4.0",
    "build >= 0.8.0",
    "docformatter >= 1.7.5",
    "mypy >= 1.9.0",
    "ruff >= 0.3.7",
    "types-python-dateutil >= 2.8.19.2",
]
test = [
    "smart_open == 6.4.0",
]

[project.urls]
"Homepage" = "https://github.com/y-scope/clp-loglib-py"
"Bug Tracker" = "https://github.com/y-scope/clp-loglib-py/issues"

[tool.black]
line-length = 100
target-version = ["py311"]
color = true
preview = true

[tool.docformatter]
make-summary-multi-line = true
pre-summary-newline = true
recursive = true
wrap-summaries = 80
wrap-descriptions = 80

[tool.mypy]
strict = true
pretty = true

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
isort.order-by-type = false
select = ["E", "I", "F"]

[tool.setuptools_scm]
